# stm32mp1sign

./: Makefile.am  README.md  configure.ac  sign.sh  stm32mp1sign.c
